# agroflow

./: .gitignore  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Analyze.tsx  Buyers.tsx  Compliance.tsx  Cooperatives.tsx  Dashboard.tsx  Documents.tsx  FarmDetail.tsx  Farms.tsx  Quality.tsx  Satellite.tsx  ShipmentDetail.tsx  Shipments.tsx  Subscription.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
src/agroflow/: ai.py  api.py  cli.py  database.py  demo.py  feeds.py  models.py  phyto.py  research.py  store.py
