[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agroflow"
version = "0.1.0"
description = "AI-powered agricultural supply chain intelligence for Michoacan, Mexico"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "anthropic>=0.39.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "ddgs>=6.0.0",
]

[project.scripts]
agroflow = "agroflow.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
